--- a/.github/workflows/main_createvm.yml
+++ b/.github/workflows/main_createvm.yml
@@ -72,5 +72,5 @@ jobs:
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B42C9D39569D44A79650994B2D2A9E9F }}
           scm-do-build-during-deployment: true
-          enable-oryx-build: true
+          sku: 'flexconsumption'
         
