--- a/.github/workflows/main_createvm.yml
+++ b/.github/workflows/main_createvm.yml
@@ -1,76 +1,127 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure Functions: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python project to Azure Function App - createvm
-
+ 
 on:
+ 
   push:
+ 
     branches:
+ 
       - main
+ 
   workflow_dispatch:
-
+ 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  PYTHON_VERSION: '3.13' # set this to the python version to use (supports 3.6, 3.7, 3.8)
-
+ 
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'
+ 
+  PYTHON_VERSION: '3.12'
+ 
 jobs:
+ 
   build:
+ 
     runs-on: ubuntu-latest
+ 
     permissions:
-      contents: read #This is required for actions/checkout
-
+ 
+      contents: read
+ 
     steps:
+ 
       - name: Checkout repository
+ 
         uses: actions/checkout@v4
-
+ 
       - name: Setup Python version
+ 
         uses: actions/setup-python@v5
+ 
         with:
+ 
           python-version: ${{ env.PYTHON_VERSION }}
-
+ 
       - name: Create and start virtual environment
+ 
         run: |
-          python3 -m venv venv
+ 
+          python -m venv venv
+ 
           source venv/bin/activate
-
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      # Optional: Add step to run tests here
-
+ 
+          pip install --upgrade pip
+ 
+          pip install -r requirements.txt
+ 
+      - name: Copy dependencies to site-packages
+ 
+        run: |
+ 
+          mkdir -p site-packages
+ 
+          cp -r venv/lib/python3.12/site-packages/* site-packages/
+ 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
+ 
+        run: |
+ 
+          zip release.zip function_app.py requirements.txt host.json site-packages -r
+ 
+      - name: Verify zip contents
+ 
+        run: unzip -l release.zip
+ 
       - name: Upload artifact for deployment job
+ 
         uses: actions/upload-artifact@v4
+ 
         with:
+ 
           name: python-app
+ 
           path: |
+ 
             release.zip
+ 
             !venv/
-
+ 
   deploy:
+ 
     runs-on: ubuntu-latest
+ 
     needs: build
-    
+ 
     steps:
+ 
       - name: Download artifact from build job
+ 
         uses: actions/download-artifact@v4
+ 
         with:
+ 
           name: python-app
-
+ 
       - name: Unzip artifact for deployment
-        run: unzip release.zip     
-        
+ 
+        run: unzip release.zip
+ 
       - name: 'Deploy to Azure Functions'
+ 
         uses: Azure/functions-action@v1
+ 
         id: deploy-to-function
+ 
         with:
+ 
           app-name: 'createvm'
+ 
           slot-name: 'Production'
+ 
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+ 
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B42C9D39569D44A79650994B2D2A9E9F }}
-          sku: 'flexconsumption'
-          scm-do-build-during-deployment: true
-          enable-oryx-build: true
+ 
+          scm-do-build-during-deployment: false  # Skip Oryx build since dependencies are included
+ 
+          enable-oryx-build: false
+
+ 
