--- a/.github/workflows/main_createvm.yml
+++ b/.github/workflows/main_createvm.yml
@@ -40,7 +40,7 @@ jobs:
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip . -x "venv/*" "!venv/lib/python*/site-packages/"
+        run: zip release.zip ./* -r cp -r venv/lib/python3.12/site-packages/* site-packages/
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
