--- a/.github/workflows/main_createvm.yml
+++ b/.github/workflows/main_createvm.yml
@@ -40,8 +40,8 @@ jobs:
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r cp -r venv/lib/python3.12/site-packages/* site-packages/
-
+        run: zip -r release.zip . -x "venv/*"
+        
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
