--- a/.github/workflows/main_createvm.yml
+++ b/.github/workflows/main_createvm.yml
@@ -34,22 +34,23 @@ jobs:
           python -m venv venv
           source venv/bin/activate
 
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      - name: Verify venv packages
+      - name: Install and force-copy dependencies
         run: |
-          echo "Virtual environment packages:"
-          ls -la venv/lib/python${{ env.PYTHON_VERSION }}/site-packages/
-      
-      - name: Create deployment package
-        run: |
-          # Include both your code and the venv packages in the zip
-          mkdir -p .python_packages/lib/python${{ env.PYTHON_VERSION }}/
-          ln -s $(pwd)/venv/lib/python${{ env.PYTHON_VERSION }}/site-packages \
-                .python_packages/lib/python${{ env.PYTHON_VERSION }}/site-packages
-          zip -r release.zip . -x '*.git*' -x 'venv/bin/*' -x 'venv/include/*' -x 'venv/lib/python${{ env.PYTHON_VERSION }}/ensurepip' -x 'venv/lib/python${{ env.PYTHON_VERSION }}/distutils'
-                
+          # Create virtual environment
+          python -m venv venv
+          source venv/bin/activate
+          
+          # Install requirements
+          pip install -r requirements.txt
+          
+          # BLUNT FORCE COPY - this is what you're asking for
+          mkdir -p .python_packages/lib/python${{ env.PYTHON_VERSION }}/site-packages
+          cp -r venv/lib/python${{ env.PYTHON_VERSION }}/site-packages/* .python_packages/lib/python${{ env.PYTHON_VERSION }}/site-packages/
+          
+          # Verify the copy worked
+          echo "Copied packages:"
+          ls -la .python_packages/lib/python${{ env.PYTHON_VERSION }}/site-packages/
+     
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
