--- a/.github/workflows/main_createvm.yml
+++ b/.github/workflows/main_createvm.yml
@@ -39,6 +39,11 @@ jobs:
           mkdir -p .python_packages/lib/python3.12/site-packages
           pip install -r requirements.txt --target=.python_packages/lib/python3.12/site-packages
 
+      - name: Arrange function files into folder
+        run: |
+          mkdir -p createvm
+          mv __init__.py function.json createvm/
+
           
       # Optional: Add step to run tests here
 
